@@ -9,9 +9,21 @@
 # (commented out until xml backend knows how to be read-only for users)
 xml:readonly:@EXPANDED_SYSCONFDIR@/gconf/gconf.xml.mandatory
 
+# To read in any mandatory settings that the Sys Admin may have created
+# prior to a desktop system upgrade. The SysAdmin can stick read-only system
+# wide sources in this file.
+
+include @EXPANDED_SYSCONFDIR@/gconf/2/local-mandatory.path
+
 # Now see where users want us to look - basically the user can stick arbitrary 
 # sources in a ~/.gconf.path file and they're inserted here
 include "$(HOME)/.gconf.path"
+
+# To read in any defaults settings that the Sys Admin may have created
+# prior to a desktop system upgrade. The SysAdmin can stick default values
+# system-wide in this file.
+
+include @EXPANDED_SYSCONFDIR@/gconf/2/local-defaults.path
 
 # Give users a default storage location, ~/.gconf
 
