@@ -1,3 +1,8 @@
+2003-10-28  Ghee Teo  <ghee.teo@sun.com>
+
+	* gconf/default.path.in: added hooks for paths to preserve
+	  local configuration gconf values as in bug #107481.
+
 2003-10-28  Mark McLoughlin  <mark@skynet.ie>
 
 	* backends/gconf-merge-tree.c: include locale.h - patch
